test/Fail/Issue2824BuiltinDefinedInParametrizedModule.err
Issue2824BuiltinDefinedInParametrizedModule.agda:10.3-30: error: [BuiltinInParameterisedModule]
The BUILTIN pragma cannot appear inside a bound context (for
instance, in a parameterised module or as a local declaration)
when checking the pragma BUILTIN NATURAL Nat
